--- a/FreeCodeCamp/CSS Color Markers/style.css
+++ b/FreeCodeCamp/CSS Color Markers/style.css
@@ -28,3 +28,20 @@ h1 {
 .blue {
     background: linear-gradient(hsl(186, 76%, 16%), hsl(223, 90%, 60%), hsl(240, 56%, 42%));
 }
+
+.cap {
+    width: 60px;
+    height: 25px;
+}
+
+.sleeve {
+    width: 110px;
+    height: 25px;
+    background-color: rgba(255, 255, 255, 0.5);
+    border-left: 10px double rgba(0, 0, 0, 0.75);
+}
+
+.cap,
+.sleeve {
+    display: inline-block;
+}
